# School-Project-PLT

./: ActiviteUML.dia  CMakeLists.txt  Citadellesv1.dia  ConceptionLogiciel.dia  README.md  config.h.in  diagrammeActiviteUML.dia  diagrammeActiviteUMLv3.dia  engine.dia  state.dia
.github/workflows/: main.yml
cmake/: restbed-config.cmake
rapport/: rapport.md
rapport/images/: asset.md
res/: cards.csv
src/: ai.dia  engine.dia  render.dia  server.dia  state.dia  typedef.dia  typedef.dia:Zone.Identifier
src/client/: CMakeLists.txt  client.h  main.cpp
src/client/client/: ActiveGame.cpp  ActiveGame.h  ApiManager.cpp  ApiManager.h  Exemple.cpp  Exemple.h  httpClient.cpp  httpClient.h
src/client/render/: Button.cpp  Card.cpp  IHMState.cpp  InteractiveElement.cpp  InteractiveElement.h  PlayerRender.cpp  Scene.cpp  VisualCard.cpp
src/server/: CMakeLists.txt  csvparser.cpp  main.cpp  server.h  test
src/server/resources/: cards.csv  cards_ids.md
src/server/server/: Client.cpp  Client.h  CommandQueue.cpp  CommandQueue.h  LiveGame.cpp  LiveGame.h  http_connection.cpp  http_connection.h  requestHandler.cpp  requestHandler.h
src/shared/: CMakeLists.txt
src/shared/ai/: AI.cpp  DeepAI.cpp  HeuristicAI.cpp  RandomAI.c  RandomAI.cpp
src/shared/engine/: BuildCommand.cpp  ChangePhaseCommand.cpp  ChooseCardCommand.cpp  ChooseCharacterCommand.cpp  ClaimBuildingGold.cpp  Command.cpp  CommandCreator.cpp  DrawCommand.cpp  EndOfTurnCommand.cpp  Engine.cpp  Gain2GoldCommand.cpp  GainGoldCommand.cpp  GetCardCommand.cpp  PlayCardCommand.cpp  StackUtils.cpp  StartGameCommand.cpp  UseCharacterAbilityCommand.cpp  UseWonderAbilityCommand.cpp
src/shared/state/: ActivePlayer.cpp  Card.cpp  GameState.cpp  Player.cpp  StateSerializer.cpp
test/: CMakeLists.txt
test/client/: test_client_dummy.cpp
test/server/: CMakeLists.txt  test_server_server.cpp
test/shared/: CMakeLists.txt  test_shared_dummy.cpp  test_shared_engine.cpp  test_shared_state.cpp
